test/error/rtc/con1.rzy
// error: loop in connection graph for sub

Dummy = Elementary
  out : signal();
    
  inp : slot()
    out();
  end
end

Con1 = Composition
  inp : slot();
  out : signal();
    
  sub : Dummy;
  
  inp -> out;
  sub.out -> sub.inp;
end

